# soft_optim

./: .gitignore  mypy.ini  pyproject.toml  setup.sh
.devcontainer/: devcontainer.json
.github/workflows/: checks.yml
soft_optim/: fine_tune.py  finetune.py  game.py  game_generator.py  metrics.py  ppo_experiments.py  ppo_finetune.py  quantilizer.py  trlx_config.py
soft_optim/configs/: ppo_gpt2.yml
soft_optim/tests/: test_fine_tune.py  test_finetune.py  test_game_generator.py  test_quantilizer.py  test_trlx_config.py
