[tool.poetry]
name = "soft_optim"
version = "0.1.0"
description = "Soft Optimization Research"
authors = [
    "Jeremy Gillen", 
    "Alan Cooney<41682961+alan-cooney@users.noreply.github.com>", 
    "Nicky Pochinkov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
trlx = {git = "https://github.com/CarperAI/trlx"}
numpy = "^1.23"
numexpr = "^2.7.0"
torch = "^1.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mypy = "^0.991"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
