[tool.poetry]
name = "soft_optim"
version = "0.1.0"
description = "Soft Optimization Research"
authors = [
    "Jeremy Gillen", 
    "Alan Cooney<41682961+alan-cooney@users.noreply.github.com>", 
    "Nicky Pochinkov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23"
numexpr = "^2.7.0"
torch = "^1.13.0"
trlx = {git = "https://github.com/pesvut/trlx.git"}
bayesian-optimization = "^1.4.2"
ray = {extras = ["tune"], version = "^2.2.0"}
tensorboardx = "^2.5.1"
tensorboard = "^2.11.2"
dict-deep = "^4.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mypy = "^0.991"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
